# Flask-MongoDB

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
api/: api_blueprint.py  crud.py  db.py  schemas.py
api/config_data/: config.py
memory_test/: Dockerfile  memory_check.py  requirements.txt
